local-fmt/tests/ui/gen_static_message/empty_placeholder.stderr
error: not found placeholder value in braces
 --> tests/ui/gen_static_message/empty_placeholder.rs:3:49
  |
3 | const _: StaticMessage<1> = gen_static_message!("Hello! {}");
  |                                                 ^^^^^^^^^^^
